--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -15,14 +15,28 @@ body {
 	min-height:100%;
 	height:100%;
 	}
-body.insertform {
+.insertform {
 	background-color:#fff;
+	padding-left:0;
+	padding-right:0;
 	}
 p {
     margin-bottom: .6em;
     line-height: 1.16em;
 	}
 iframe {
+	width:100%;
+	height:100%;
+	margin:0;
+	overflow:visible;
+	}
+div#selected {
+	width:100%;
+	height:100%;
+	margin:0;
+	overflow:visible;
+	}
+object#selected {
 	width:100%;
 	height:100%;
 	margin:0;
@@ -278,6 +292,12 @@ main {
 #goodservideo p {
 	margin-bottom: 1.6em;
 	margin-top: 1em;
+	}
+#markoptions p {
+	margin-top: .6em;
+	}
+#panels p {
+	margin-bottom: 1.6em;
 	}
 #goodservideo .match {
 	min-height: 400px;
@@ -641,6 +661,10 @@ label a:hover {
     border-top-right-radius: 2px;
 	width:100%;
 	}
+.insertform h2.card-title {
+	padding-top:4px;
+	padding-bottom:4px;
+	}
 .weight600 {
 	font-weight:600;
 	}
@@ -680,6 +704,10 @@ label {
 	}
 .visuallyadded {
 	display:inline-block!important;
+	}
+.phone {
+	padding-left:0!important;
+	padding-right:0!important;
 	}
 /*BUTTONS*/
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, div[role="radio"]:focus, .btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus {
@@ -796,6 +824,9 @@ button#moreoptionsbtn {
 	margin:0 auto;
 	margin-top: 1.66em;
 	border: none!important;
+	}
+.btn#noborder {
+    border-left: 0!important;
 	}
 div[role="heading"] { 
 	margin-bottom: .6em;
@@ -970,7 +1001,7 @@ input[type="checkbox"]{
 	font-family: 'FontAwesome';
 	position:absolute;
 	left: -32px;
-	top: -1px;
+	top: -4px;
 	color: transparent;
 	-webkit-transition: color .2s;
 	transition: color .2s;
