--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -733,6 +733,9 @@ label {
 	padding-right:0!important;
 	}
 /*BUTTONS*/
+button[disabled] {
+    background-color: #eee!important;
+	}
 .inlinebuttons {
 	margin:0 auto;
 	position:relative;
