--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -805,7 +805,7 @@ button[disabled] {
 	margin-top:1.2em;
 	margin-bottom:1em;
 	}
-#plusforeign, #plusforeign {
+#plusforeign, #pluspending {
 	width: 400px;
     margin: 0 auto;
 	}
