--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -743,6 +743,10 @@ span.weight600 {
 .checkbox-inline, .radio-inline {
     padding-left: 21px;
 	}
+input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+	}
 label {
     font-weight: 400;
 	font-size:inherit;
@@ -774,6 +778,9 @@ label.hasinfo {
 	}
 .visuallyadded {
 	display:inline-block!important;
+	}
+.visuallyaddedblock {
+	display:block!important;
 	}
 .phone, .phones {
 	padding-left:0!important;
@@ -1015,11 +1022,10 @@ div[role="heading"] button {
 	padding:0;
 	font-weight:600;
 	outline-offset: 4px;
-	color: #808080;
+	color: #333;
 	}
-.Accordion-trigger {
-    font-weight: 600;
-    color: #333;
+.Accordion-trigger.link {
+    color: #337ab7;
 	}
 .Accordion-trigger .btn-link:focus, .Accordion-trigger .btn-link:hover {
     color: #808080;
@@ -1267,7 +1273,7 @@ input[type="radio"]:focus + label span.checkmark::after {
 	background: white;
 	}
 /* FIX for smooth animations */	
- #nocolorclaim, #yescolorclaim, #notranslation, #yestranslation, #yestransliteration, #yesnps, #markoptions, #yesattorneyfiling, #yesusentity, #gsselected {
+ #nocolorclaim, #yescolorclaim, #notranslation, #yestranslation, #yestransliteration, #yesnps, #markoptions, #yesattorneyfiling, #yesusentity, #gsselected, #register2, #yesdistict, #yespart, #yeswhole, #yesevidence, #yesotherform, #yeswholeother, #yespartother, #hideshowconcurrentuses {
 	 overflow:hidden;
  	}
 /* FILE UPLOAD */
@@ -1527,6 +1533,12 @@ a.footer-brand {
 		top: 10%!important;
 		}
 }
+@media (max-width: 827px) {
+	.form-check span.small.match.radio::after {
+		font-size: 1.6em !important;
+		top: -26%!important;
+		}
+}
 @media (min-width: 507px) and (max-width: 767px) {
 	.form-check span.small.radio::after {
 		top: -22%;
@@ -1535,6 +1547,11 @@ a.footer-brand {
 @media (min-width: 828px) {
 	.form-check span.small.radio::after {
 		top: -22%;
+		}
+}
+@media (min-width: 1400px) {
+	.wide {
+		width:80%;
 		}
 }
 @media (min-width: 800px) {
@@ -1640,6 +1657,9 @@ a.footer-brand {
 		}
 	#mydata2 .list-group-item a#clearform {
 		margin-left: 0;
+		}
+	.form-check {
+    	padding-left: 50px;
 		}
 }
 @media (max-width: 1199px) {
