--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -22,8 +22,8 @@ body {
 	padding-right:0;
 	}
 p {
-    margin-bottom: .6em;
-    line-height: 1.16em;
+    margin-bottom: .7em;
+    line-height: 1.19em;
 	}
 p#showmarktxt {
 	font-family: Palatino, Garamond, Bookman, Avant Garde;
@@ -433,6 +433,22 @@ h4, h5, h6 {
 h2 .glyphicon {
 	margin-left: .5em;
 	top: 2px;
+	}
+#success h2  {
+	margin-bottom: .6em;
+    line-height: 1.16em;
+	font-size: 1.2em;
+	color:#007A33;
+	margin-left:1.6em;
+	margin-right:1.6em;
+	}
+#success p  {
+	margin-left:2em;
+	margin-right:2em;
+	}
+h1.message   {
+	text-align:center;
+	margin-top:1em;
 	}
 .glyphicon-triangle-right {
 	top: 2px;
@@ -849,6 +865,10 @@ label a:hover {
 span.weight600 {
 	color:#E4002B;
 	font-weight:normal;
+	}
+#success span.weight600 {
+	color:#333;
+	font-weight:600;
 	}
 .required {
 	margin-top:1em;
