--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -308,6 +308,60 @@ main {
 	-moz-border-radius: 	3px;
 	border-radius: 			3px;
 	}
+/*TAB CAROUSEL*/
+[aria-hidden="true"] {
+	display: none;
+	}
+/* tab panels */
+ul[role="tablist"] {
+	list-type:none;
+	margin: 0 0 0 0;
+	padding: 0;
+	}
+ul[role="tablist"] li {
+	float: left;
+	position: relative;
+	top: 1px;
+	margin: 0 1em 1em 0;
+	padding: .8em .8em;
+	list-style-type: none;
+	background: #A6192E;
+	-webkit-border-radius:2px;
+	-moz-border-radius:2px;
+	border-radius:2px;
+	-webkit-border-bottom-left-radius:0;
+	-moz-border-bottom-left-radius:0;
+	border-bottom-left-radius:0;
+	-webkit-border-bottom-right-radius:0;
+	-moz-border-bottom-right-radius:0;
+	border-bottom-right-radius:0;
+	border-bottom: none;
+	line-height: 1.5em;
+	width: 100%;
+	}
+ul[role="tablist"] a {
+	text-decoration: none;
+	color: #fff;
+	padding-top:.15em;
+	}
+.notice {
+	background-color:#FABBCB!important;
+	}	
+.tabwidget .tabpanels {
+	z-index: 99;
+	clear: both;
+	background: #fff;
+	padding: 0;
+	-webkit-border-radius:2px;
+	-moz-border-radius:2px;
+	border-radius:2px;
+	}
+ul[role="tablist"] a[aria-selected="true"] {
+	font-weight: bold;
+	}
+.tabwidget:focus, .tabwidget div:focus {
+	outline:0px;
+	}
 #owner main {
 	height:100%;
 	overflow: visible;
@@ -468,7 +522,25 @@ table.dataTable thead .sorting:after {
   font-family:'FontAwesome';
   /* sort */
 	}
+/*table.dataTable thead .sorting {
+    background-image: url('../images/sort_asc.png');
+	}
+table.dataTable thead .sorting_asc {
+    background-image: url('../images/sort_asc.png');
+	}
+table.dataTable thead .sorting_desc {
+    background-image: url('../images/sort_asc.png');
+	}*/
+#dashboardtableone_paginate, #dashboardtableone_info, #dashboardtabletwo_paginate, #dashboardtabletwo_info, #dashboardtablethree_paginate, #dashboardtablethree_info {
+	margin-top:1em;
+	}
 table.dataTable thead .sorting {
+    background-image: none;
+	}
+table.dataTable thead .sorting_asc {
+    background-image: none;
+	}
+table.dataTable thead .sorting_desc {
     background-image: none;
 	}
 .table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
@@ -479,6 +551,9 @@ table.dataTable thead .sorting {
 	}
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
 	vertical-align:middle!important;
+	}
+table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
+    background-color: #e8f5fa;
 	}
 #goodsandservices_wrapper {
 	margin-top:1.9em;
@@ -510,15 +585,61 @@ table#goodsandservices {
 	border-color: #1596D1;
     outline: 0;
 	}
+#dashboardmain h1 {
+	margin-bottom: .3em;
+	}
+#dashboardmain {
+	background-color: #EEEEEE;
+	font-size:.9em;
+	}
+#dashboardmain .form-group {
+    margin-bottom: 0;
+	}
+#dashboardtableone thead, #dashboardtabletwo thead, #dashboardtablethree thead {
+	color:#fff;
+	}
+#dashboardtableone_length label, #dashboardtabletwo_length label, #dashboardtablethree_length label {
+	margin-bottom: 1em;
+	margin-top: .39em;
+	}
+#dashboardtableone_filter label, #dashboardtabletwo_filter label, #dashboardtablethree_filter label {
+	margin-bottom: 1.5em;
+	}
+#dashboardtableone thead {
+	background: #1596D1;
+	}
+#dashboardtabletwo thead {
+	background: #F3D54E;
+	}
+#dashboardtablethree thead {
+	background: #A6192E;
+	}
+#dashboardtableone .centertxt, #dashboardtabletwo .centertxt, #dashboardtablethree .centertxt, #goodsandservices .centertxt {
+	text-align:center;
+	}
+.dashsection {
+	background-color:#fff;
+	-webkit-box-shadow: 0 0 0 rgba(0,0,0,0.0);
+	-moz-box-shadow: 	0 0 0 rgba(0,0,0,0.0);
+	box-shadow: 		0 0 0 rgba(0,0,0,0.0);
+	padding: 27px 40px 27px 40px;
+	-webkit-border-radius: 	3px;
+	-moz-border-radius: 	3px;
+	border-radius: 			3px;
+	margin-bottom:27px;
+	}
+#dashsectionscontainer {
+	padding: 0 27px 0 27px;
+	}	
 table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before {
-	top: 29.05%!important;
-	/*line-height: 3em;*/
-	background-color: #004C97;
-	font-size: 2.3em;
-	left:.3em;
-	width:26px;
-	height:26px;
-	line-height: .89em;
+	background-color: #009CDE;
+	left:6px;
+	}
+table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table#dashboardtabletwo.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before {
+	background-color: #F3D54E;
+	}
+table#dashboardtablethree.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table#dashboardtablethree.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before {
+	background-color: #A6192E;
 	}
 table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
 	background-color: #009CDE;
@@ -527,7 +648,6 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before, tabl
     cursor: pointer;
     border: 1px solid #9BB8D3;
 	color:#fff!important;
-    border-radius: 0;
     -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0);
     box-shadow: inset 0 0 0 rgba(0,0,0,0);
 	background-color: #9BB8D3;
@@ -543,8 +663,13 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before, tabl
     background: linear-gradient(to bottom, #EEEEEE 100%, #EEEEEE 100%)!important;
 	color:#fff!important;
 	}
+#dashboardtabletwo_paginate .paginate_button.current, #dashboardtabletwo_paginate .paginate_button.active {
+    border: 1px solid #EFDBB2;
+    background-color: #EFDBB2;
+    background: linear-gradient(to bottom, #EFDBB2 0%, #EFDBB2 0%);
+	}
 .dataTables_paginate .paginate_button:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover {
-	background: linear-gradient(to bottom, #9BB8D3 100%, #9BB8D3 100%)!important;
+	background: linear-gradient(to bottom, #9BB8D3 0%, #9BB8D3 0%)!important;
 	border: 1px solid #9BB8D3!important;
 	color:#fff!important;
 	}
@@ -983,12 +1108,15 @@ label.disabled span {
 	}
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, div[role="radio"]:focus, .btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-sm.active.focus, .btn-sm.active:focus, .btn-sm.focus, .btn-sm:active.focus, .btn-sm:active:focus, .btn-sm:focus, .close.active.focus, .close.active:focus, .close.focus, .close:active.focus, .close:active:focus, .close:focus {
     /*outline: thin dotted;*/
-	outline: 1px solid #009CDE!important;
-	outline: 1px auto -webkit-focus-ring-color;
+	outline: 1px solid #9BB8D3!important;
+	outline: 1px solid -webkit-focus-ring-color;
 	outline-offset: -4px;
 	-webkit-box-shadow: rgb(0,156,222); 
   	-moz-box-shadow:    rgb(0,156,222);  
   	box-shadow:         rgb(0,156,222);
+	}
+a:focus {
+    outline: 0 solid -webkit-focus-ring-color;
 	}
 .btn.active, .btn:active {
 	-webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0);
@@ -1217,7 +1345,7 @@ div[role="heading"] button {
 .collapse {
 	display: none;
 	}
-#goodsandservices_wrapper input[type="search"]:focus { 
+#goodsandservices_wrapper input[type="search"]:focus, #dashboardtableone_wrapper input[type="search"]:focus, #dashboardtabletwo_wrapper input[type="search"]:focus, #dashboardtablethree_wrapper input[type="search"]:focus { 
 	margin-left: 1em; 
     background-color: #fafafb!important;
     box-shadow: none;
@@ -1230,10 +1358,10 @@ input[type="file"]:focus {
 select, input[type="text"], input[type="email"], input[type="date"], input[type="date"] { 
 	min-height: 38px; 
 	}
-#goodsandservices_wrapper input[type="search"] {
+#goodsandservices_wrapper input[type="search"], #dashboardtableone_wrapper input[type="search"], #dashboardtabletwo_wrapper input[type="search"], #dashboardtablethree_wrapper input[type="search"] {
 	margin-left: 1em!important;
 	}
-.form-control, #goodsandservices_wrapper input[type="search"] {
+.form-control, #goodsandservices_wrapper input[type="search"], #dashboardtableone_wrapper input[type="search"], #dashboardtabletwo_wrapper input[type="search"], #dashboardtablethree_wrapper input[type="search"] {
     box-shadow: none;
 	-webkit-border-radius: 	0;
 	-moz-border-radius: 	0;
