--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -445,39 +445,6 @@ h1 {
 	margin:0;
 	margin-bottom: 1.3em;
 	}
-#declarationsignature #authem .small {
-	margin-bottom: 3.3em;
-	}
-#declarationsignature .form-check span#authem::before {
-    bottom: .2em!important;
-	}
-#declarationsignature #declarationschecks label {
-	margin-top:0!important;
-	margin-bottom:0!important;
-	}
-#declarationsignature #declarationschecks span {
-	margin-top:0!important;
-	margin-bottom:0!important;
-	}
-#declarationsignature .form-check span::before {
-	top:.2em!important;
-	bottom:auto!important;
-	}
-#declarationsignature .form-check span::before {
-	content: '\f00c'!important;
-    font-family: 'FontAwesome';
-    color: #fff;
-    -webkit-transition: color .2s;
-    transition: color .2s;
-	font-size: 1.4em;
-	padding-left: .14em;
-	}
-#declarationsignature .form-check span::after {
-	content:'';
-	}
-#declarationsignature .checkmargin {
-	margin-bottom:2em!important;
-	}
 h4, h5, h6 {
 	margin-top: 2em;
     margin-bottom: 1em;
@@ -488,6 +455,7 @@ h2 .glyphicon {
 	}
 #success h2  {
 	margin-bottom: .6em;
+	margin-top: .8em;
     line-height: 1.16em;
 	font-size: 1.2em;
 	color:#007A33;
@@ -516,19 +484,6 @@ table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:after {
     color: #eee;
 	}
-table.dataTable thead .sorting:after {
-/*  font-family:'FontAwesome';
-*/  /* sort */
-	}
-/*table.dataTable thead .sorting {
-    background-image: url('../images/sort_asc.png');
-	}
-table.dataTable thead .sorting_asc {
-    background-image: url('../images/sort_asc.png');
-	}
-table.dataTable thead .sorting_desc {
-    background-image: url('../images/sort_asc.png');
-	}*/
 #dashboardtableone_paginate, #dashboardtableone_info, #dashboardtabletwo_paginate, #dashboardtabletwo_info, #dashboardtablethree_paginate, #dashboardtablethree_info {
 	margin-top:1em;
 	}
@@ -583,12 +538,14 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 	padding-top:.8em;
 	}
 #goodsandservices .form-check span.radio.notspecial::before {
-	left:0!important;
 	top:-5px;
 	}
 table#goodsandservices {
 	border-top: 1px solid #333;
     margin-top: 2.8em;
+	}
+#goodsandservices .radio {
+    margin-top: 10px!important;
 	}
 #goodsandservices label.form-check {
     padding-left: 0;
@@ -596,11 +553,6 @@ table#goodsandservices {
     margin-bottom: .6em;
     margin-top: 0;
 	font-size:100%!important
-	}
-#goodsandservices input[type="checkbox"]:checked + label span.radio::after {
-	top:-17px!important;
-	font-size:1.3em;
-	left:3px!important;
 	}
 #goodsandservices th:focus, .sorting_1:focus {
     box-shadow: none;
@@ -981,10 +933,6 @@ label a:hover {
     background-color: #004C97;
     color: #fff;
 	}
-/*#uploaded form .card-text, #entities .card-text, #basisabde .card-text {
-	padding-top:5px;
-	padding-bottom:5px;
-	}*/
 .lead {
     margin-top: 30px;
     margin-bottom: 20px;
@@ -1033,6 +981,7 @@ label {
     font-weight: 400;
 	font-size:inherit;
 	margin-bottom: .6em;
+	line-height: 1.19em;
 	}
 label.hasinfo {
 	display:inline-block;
@@ -1389,7 +1338,7 @@ select, input[type="text"], input[type="email"], input[type="date"], input[type=
     border-width: 0;
 	display: inline-block;
     margin-left: 1em;
-    height: 34px;
+    height: 38px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
@@ -1420,6 +1369,29 @@ legend {
 	overflow:hidden;
 	}
 /* CHECKBOXES */
+span#authem  {
+	margin-bottom: 0!important;
+	}
+#declarationsignature #declarationschecks label {
+	margin-top:0!important;
+	margin-bottom:0!important;
+	}
+#declarationsignature #declarationschecks span {
+	margin-top:0!important;
+	margin-bottom:0!important;
+	}
+.form-check span::before {
+	content: '\f00c'!important;
+    font-family: 'FontAwesome';
+    color: #fff;
+    -webkit-transition: color .2s;
+    transition: color .2s;
+	font-size: 1.4em;
+	padding: .175em .16em;
+	}
+#declarationsignature .checkmargin {
+	margin-bottom:2em!important;
+	}	
 input[type="checkbox"]{
   	position:absolute;
 	left:-10000px;
@@ -1428,28 +1400,11 @@ input[type="checkbox"]{
 	height:1px;
 	overflow:hidden;
 	}
-.form-check {
-	padding-left:76px;
-	display:block;
-	margin-bottom:27px;
-	margin-top:27px;
-	}
-.form-check input {
-	cursor:pointer;
-	}
-.form-check span::before,
-.form-check span::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	}
 .form-check span.radio.notspecial::before {
-	width: 27px;
-	height: 27px;
+	position:absolute;
 	background-color: #fff;
-	left: -35px;
+	left: -37px;
+    top: -6px;
 	box-sizing: border-box;
 	border: 1px solid #808080;
 	transition: border-color .2s;
@@ -1459,46 +1414,12 @@ input[type="checkbox"]{
 	border-bottom-left-radius: .3em;
 	opacity:1.0;
 	-moz-opacity: 1.0;
-	}
-.form-check span.radio.notspecial {
-	opacity:1.0;
-	-moz-opacity: 1.0;
-	}
-.form-check span.radio.special::before {
-	width: 27px;
-	height: 27px;
-	background-color: #EEE;
-	left: -35px;
-	box-sizing: border-box;
-	border: 1px solid #808080;
-	transition: border-color .2s;
-	border-top-left-radius: .3em;
-	border-top-right-radius: .3em;
-	border-bottom-right-radius: .3em;
-	border-bottom-left-radius: .3em;
-	opacity: 0.5;
-	-moz-opacity: 0.5;
+	cursor:pointer;
+	line-height: 1.02em;
 	}
 .form-check span.radio.special {
 	opacity: 0.5;
 	-moz-opacity: 0.5;
-	}
-.form-check span.small.radio::after {
-	font-size: 1.6em!important;
-	top: 9%;
-	}
-.form-check span.radio::after {
-	content: '\f00c';
-	font-family: 'FontAwesome';
-	position:absolute;
-	left: -33px;
-	top: -19%;
-	color: transparent;
-	-webkit-transition: color .2s;
-	transition: color .2s;
-	}
-.long span {
-	width:90%;
 	}
 input[type="checkbox"]:checked + label span.radio::before {
 	background-color: #009CDE;
@@ -1520,31 +1441,35 @@ input[type="date"], input[type="date"] {
 #specdescriptwo, #specdescript {
 	height:115px;
 	}
-/* RADIOS */
+label.form-check-label {
+    margin-left: 2.7em;
+	}
+/*RADIOS*/
 input[type=radio] {
 	margin:0;
 	background-color: #009CDE;
 	}
 .radio {
-	margin-bottom: 1.4em;
-    margin-top: 1.4em!important;
+	margin-bottom: 1.7em;
+    margin-top: 1.7em!important;
 	}
 label.radio-inline {
 	margin-right:1em;
+	margin-left: .42em;
 	}
 div[role="radiogroup"] {
 	margin-bottom:1.2em;
 	}
 .radiocontainer {
-  display: inline-block;
-  position: relative;
-  padding-left: 35px!important;
-  margin-bottom: 12px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	display: inline-block;
+	position: relative;
+	padding-left: 39px!important;
+	margin-bottom: 12px;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	}
 .radiocontainer input {
 	position: absolute;
@@ -1555,14 +1480,14 @@ div[role="radiogroup"] {
 	width: 1px;
 	}
 .checkmark {
-  position: absolute;
-  top: -2px;
-  left: 0;
-  height: 27px;
-  width: 27px;
-  background-color: #fff;
-  border: 1px solid #808080;
-  border-radius: 50%;
+	position: absolute;
+	top: -7px;
+	left: 0;
+	height: 34px;
+	width: 34px;
+	background-color: #fff;
+	border: 1px solid #808080;
+	border-radius: 50%;
 	}
 .radiocontainer input:checked ~ .checkmark {
   	background-color: #009CDE;
@@ -1582,14 +1507,14 @@ input[type="radio"]:focus + label span.checkmark::after {
 	display: block;
 	}
 .radiocontainer .checkmark:after {
-	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
+	top: 11px;
+	left: 11px;
+	width: 11px;
+	height: 11px;
 	border-radius: 50%;
 	background: white;
 	}
-/* FIX for smooth animations */	
+/* animations */	
  #nocolorclaim, #yescolorclaim, #notranslation, #yestranslation, #yestransliteration, #yesnps, #markoptions, #yesattorneyfiling, #yesusentity, #gsselected, #register2, #yesdistict, #yespart, #yeswhole, #yesevidence, #yesotherform, #yeswholeother, #yespartother, #hideshowconcurrentuses {
 	 overflow:hidden;
  	}
@@ -1791,7 +1716,7 @@ footer {
     top: 100%;
     width: 100%;
 	background-color: #222222;
-	margin-top:200px;
+	margin-top:260px;
 	}
 footer p {
 	font-size:.7em;
@@ -1832,6 +1757,37 @@ a.footer-brand {
     border-color: #1596D1;
     outline: 0;
 	}
+@media (max-width: 528px) { 
+	.breadcrumb-steps p {
+		display:none!important;
+		}
+}
+@media (max-width: 576px) { 
+	#goodservideo .bgimg {
+		background: url('../images/tmin_news_06_goods_and_services_sm.jpg');
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-size:94%;
+		min-height:280px;
+		}
+}
+@media (min-width: 577px) and (max-width:991px) { 
+	#goodservideo .bgimg {
+	  background: url('../images/tmin_news_06_goods_and_services_md.jpg');
+	  background-repeat: no-repeat;
+	  background-size: contain;
+	  background-size:96%;
+	  min-height:390px;
+	}
+}
+@media (min-width: 528px) and (max-width:767px) { 
+	.breadcrumb-steps p {
+    	display: table-cell!important;
+		padding-right:17px!important;
+		padding-left:17px;
+		font-size: .82em;
+	}
+}
 @media (max-width: 500px){
 	#payment .form-inline input {
 		float:none!important;
@@ -1860,37 +1816,10 @@ a.footer-brand {
 		padding-right:12px!important;
 		}
 }
-@media (min-width: 768px) and (max-width: 827px) {
-	.form-check span.small.radio::after {
-		top: 10%!important;
-		}
-}
-@media (max-width: 827px) {
-	.form-check span.small.match.radio::after {
-		font-size: 1.6em !important;
-		top: -26%!important;
-		}
-}
-@media (min-width: 507px) and (max-width: 767px) {
-	.form-check span.small.radio::after {
-		top: -22%;
-		}
-}
-@media (min-width: 828px) {
-	.form-check span.small.radio::after {
-		top: -22%;
-		}
-}
 @media (min-width: 800px) {
 	.inlinebuttons {
 		width: 61%;
 	}
-#declarationsignature .indentctr {
-		width: 90%;
-		margin: 0 auto;
-		float: none;
-		}
-}
 @media (max-width: 768px) {
 	.btn-success.add.ctr {
 		margin-top:0;
@@ -1908,10 +1837,6 @@ a.footer-brand {
 		}
 	#goodsandservices th {
 		line-height:1em;
-		}
-	#goodsandservices input[type="checkbox"]:checked + label span.radio::after {
-		top: -15px !important;
-		left: 4px !important;
 		}
 	ul#lowernav li {
 		color: #fff!important;
@@ -1963,9 +1888,6 @@ a.footer-brand {
 	.navbar-nav .open .dropdown-menu>li>a {
     	line-height: 2.7em;
 		}
-	.breadcrumb-steps p {
-		display:none!important;
-		}
 	.popover {
 		top:-16px!important;
 		left:140px!important;
@@ -2002,35 +1924,9 @@ a.footer-brand {
 		}
 }
 /* IMAGES */
-@media (max-width: 576px) { 
-	#goodservideo .bgimg {
-		background: url('../images/tmin_news_06_goods_and_services_sm.jpg');
-		background-repeat: no-repeat;
-		background-size: contain;
-		background-size:94%;
-		min-height:280px;
-		}
-}
 @media (min-width: 577px) { 
 	#goodservideo .bgimg {
 	  background-size:95%;
-	}
-}
-@media (min-width: 577px) and (max-width:991px) { 
-	#goodservideo .bgimg {
-	  background: url('../images/tmin_news_06_goods_and_services_md.jpg');
-	  background-repeat: no-repeat;
-	  background-size: contain;
-	  background-size:96%;
-	  min-height:390px;
-	}
-}
-@media (min-width: 528px) and (max-width:767px) { 
-	.breadcrumb-steps p {
-    	display: table-cell!important;
-		padding-right:17px!important;
-		padding-left:17px;
-		font-size: .82em;
 	}
 }
 @media (min-width: 700px) {
@@ -2053,17 +1949,11 @@ a.footer-brand {
 }
 @media (min-width: 1400px) {
 	.wide {
-		width:70%;
-		}
-	#declarationsignature .indentctr {
-		width: 60%;
+		width:80%;
 		}
 }
 @media (min-width: 2150px) {
 	.wide {
 		width:60%;
-		}
-	#declarationsignature .indentctr {
-		width: 50%;
 		}
 }
